SEO polish: refine robots, sitemap, and page indexing tags

--- a/admin/login.html
+++ b/admin/login.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login - BrokeAnt</title>
+    <meta name="description" content="Secure admin login for BrokeAnt marketplace management.">
+    <link rel="canonical" href="https://www.brokeant.com/admin/login.html">
+    <meta name="robots" content="noindex, nofollow">
     <style>
         * {
             margin: 0;
