--- a/local-admin-dashboard.html
+++ b/local-admin-dashboard.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Local Admin Dashboard - BrokeAnt</title>
+  <meta name="description" content="Local Admin dashboard for reviewing and moderating pending BrokeAnt listings.">
+  <link rel="canonical" href="https://www.brokeant.com/local-admin-dashboard.html">
+  <meta name="robots" content="noindex, nofollow">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
