--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
   <title>Login | BrokeAnt Marketplace</title>
     <meta name="description" content="Log in to BrokeAnt to view advertisements, message sellers, and manage your items.">
     <link rel="canonical" href="https://www.brokeant.com/login.html">
+    <meta name="robots" content="noindex, follow">
 
     <meta property="og:title" content="Login | BrokeAnt Marketplace">
     <meta property="og:description" content="Log in to BrokeAnt to view advertisements, message sellers, and manage your items.">
