--- a/my-listings.html
+++ b/my-listings.html
@@ -6,6 +6,7 @@
   <title>My Advertisements | BrokeAnt Marketplace</title>
     <meta name="description" content="Manage your BrokeAnt advertisements, edit details, and request city access.">
     <link rel="canonical" href="https://www.brokeant.com/my-listings.html">
+    <meta name="robots" content="noindex, nofollow">
 
     <meta property="og:title" content="My Advertisements | BrokeAnt Marketplace">
     <meta property="og:description" content="Manage your BrokeAnt advertisements, edit details, and request city access.">
