--- a/payment-checkout.html
+++ b/payment-checkout.html
@@ -6,6 +6,7 @@
     <title>Complete Payment | BrokeAnt Marketplace</title>
     <meta name="description" content="Complete your BrokeAnt registration payment to activate your account and start posting advertisements.">
     <link rel="canonical" href="https://www.brokeant.com/payment-checkout.html">
+    <meta name="robots" content="noindex, nofollow">
 
     <meta property="og:title" content="Complete Payment | BrokeAnt Marketplace">
     <meta property="og:description" content="Complete your BrokeAnt registration payment to activate your account and start posting advertisements.">
