--- a/payment-status.html
+++ b/payment-status.html
@@ -6,6 +6,7 @@
   <title>Payment Status | BrokeAnt Marketplace</title>
     <meta name="description" content="Check your BrokeAnt payment status and account activation.">
     <link rel="canonical" href="https://www.brokeant.com/payment-status.html">
+    <meta name="robots" content="noindex, nofollow">
 
     <meta property="og:title" content="Payment Status | BrokeAnt Marketplace">
     <meta property="og:description" content="Check your BrokeAnt payment status and account activation.">
