--- a/post-listing.html
+++ b/post-listing.html
@@ -6,6 +6,7 @@
   <title>Post an Advertisement | BrokeAnt Marketplace</title>
     <meta name="description" content="Post a new item for sale in your city on BrokeAnt. Add photos and details in minutes.">
     <link rel="canonical" href="https://www.brokeant.com/post-listing.html">
+    <meta name="robots" content="noindex, nofollow">
 
     <meta property="og:title" content="Post an Advertisement | BrokeAnt Marketplace">
     <meta property="og:description" content="Post a new item for sale in your city on BrokeAnt. Add photos and details in minutes.">
