--- a/reply-message.html
+++ b/reply-message.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reply to Buyer - BrokeAnt</title>
+  <meta name="description" content="Reply to buyer messages for your BrokeAnt advertisements.">
+  <link rel="canonical" href="https://www.brokeant.com/reply-message.html">
+  <meta name="robots" content="noindex, nofollow">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
