--- a/reset-password.html
+++ b/reset-password.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Reset Password - BrokeAnt</title>
+  <meta name="description" content="Set a new password for your BrokeAnt account.">
+  <link rel="canonical" href="https://www.brokeant.com/reset-password.html">
+  <meta name="robots" content="noindex, nofollow">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
