--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -14,6 +14,9 @@
 
 
     <title>Admin Dashboard - BrokeAnt</title>
+    <meta name="description" content="BrokeAnt admin dashboard for users, listings, payments, and moderation workflows.">
+    <link rel="canonical" href="https://www.brokeant.com/admin/dashboard.html">
+    <meta name="robots" content="noindex, nofollow">
 
 
     <style>
