--- a/forgot-password.html
+++ b/forgot-password.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Forgot Password - BrokeAnt</title>
+  <meta name="description" content="Reset access to your BrokeAnt account by requesting a password reset link.">
+  <link rel="canonical" href="https://www.brokeant.com/forgot-password.html">
+  <meta name="robots" content="noindex, nofollow">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
