--- a/local-admin.html
+++ b/local-admin.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Become a Local Admin - BrokeAnt</title>
+  <meta name="description" content="Apply to become a BrokeAnt Local Admin and help moderate listings in your community.">
+  <link rel="canonical" href="https://www.brokeant.com/local-admin.html">
+  <meta name="robots" content="index, follow">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
